# object_recognition

./: .gitignore  README.md
ar_track_alvar/: CMakeLists.txt  package.xml
ar_track_alvar/bundles/: table_0_6_7.xml
ar_track_alvar/launch/: pr2_bundle.launch  pr2_indiv.launch
ar_track_alvar/nodes/: FindMarkerBundles.cpp  IndividualMarkers.cpp
bottomup_msgs/: CMakeLists.txt  mainpage.dox  package.xml
bottomup_msgs/msg/: Hypothesis.msg  Object.msg  Region.msg  bottomup_msg.msg
ist_object_details/: CMakeLists.txt  package.xml
ist_object_details/config/: parameters.yaml  parameters_all_except_tools.yaml  parameters_best_for_vertical_experiences.yaml  parameters_mico_gazebo.yaml  parameters_sim_augsburg.yaml  parameters_table_augsburg.yaml  parameters_tools.yaml
ist_object_details/include/object_details/: defines.h  object_details.h  region.h
ist_object_details/include/ros_object_details/: 3d_geometric_moments.h  ros_object_details.h
ist_object_details/launch/: ist_object_details.launch  ist_object_details_mico_gazebo.launch
ist_object_details/src/object_details/: object_details.cpp
ist_object_details/src/ros_object_details/: ros_object_details.cpp
ist_object_detection/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
ist_object_detection/launch/: object_detection.launch  object_detection_freiburg.launch
ist_object_detection/scripts/: detect_clusters_client.py  detect_clusters_server.py  detect_objects_client.py  detect_objects_server.py  tabletop_and_obj_completion_service_call.py  tabletop_service_call.py
objectrecognition/: CMakeLists.txt  CMakeLists.txt~  INSTALL_GUIDE  mainpage.dox  package.xml  package.xml~
objectrecognition/config/: db.yaml  models.xml  models.xml~  parameters.yaml  parameters.yaml~  parameters_mug_wine_symmetric_slow_version.yaml
objectrecognition/include/objectrecognition/: defines.h  filtering.h  models.h  models.h~  object_model.h  object_model.h~  point_pair.h  pose_estimation.h  serialization.h  structs.h
objectrecognition/include/objectrecognition_si/: object_model.h  point_pair.h  pose_estimation.h
objectrecognition/include/objectrecognition_sv/: object_model.h  point_pair.h  pose_estimation.h
objectrecognition/include/ros_objectrecognition/: object_recognition_ros.h  object_recognition_ros.h~  particle_filter.h
objectrecognition/launch/: 3d_bottomup_listener.launch  3d_bottomup_object_detector.launch  object_recognition_pose_estimation_server.launch  object_recognition_pose_estimation_server.launch~  object_recognition_single_model.launch  others.launch
objectrecognition/src/: obj_to_ply.c  ply_io.c  ply_io.h  upsampling.cpp
objectrecognition/src/objectrecognition/: filtering.cpp  object_model.cpp  point_pair.cpp  pose_estimation.cpp
objectrecognition/src/objectrecognition_si/: object_model.cpp  point_pair.cpp  pose_estimation.cpp
objectrecognition/src/objectrecognition_sv/: object_model.cpp  object_model.cpp~  point_pair.cpp  pose_estimation.cpp
objectrecognition/src/ros_objectrecognition_si/: household_object_detector.cpp
objectrecognition/src/ros_objectrecognition_sv/: graspable_points.cpp  household_object_detector.cpp  household_object_detector_openmp.cpp  household_object_detector_server.cpp  household_object_detector_server.cpp~  household_object_detector_service.cpp~  particle_filter.cpp
opencv_calibration/: package.xml
opencv_calibration/src/: arm_camera_calibration.cpp
perception/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  setup.py
perception/action/: DetectObjects.action  DetectObjects.action~
perception/launch/: demo.launch  demo.launch~  demo_gazebo.launch  perception.launch  perception_gazebo.launch  perception_mico_gazebo.launch
perception/nodes/: detect_objects_client.py  detect_objects_client.py~  detect_objects_server.py  detect_objects_server.py~  detect_objects_server_mico_arm.py
perception_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
perception_msgs/action/: DetectObjects.action
perception_msgs/msg/: DetectClustersAction.msg  DetectClustersActionFeedback.msg  DetectClustersActionGoal.msg  DetectClustersActionResult.msg  DetectClustersFeedback.msg  DetectClustersGoal.msg  DetectClustersResult.msg  DetectObjectsGoal.msg  DetectObjectsResult.msg  Object.msg  Region.msg  TableRegion.msg  Task.msg
perception_msgs/srv/: GetEllipsoids.srv  GetObjectDetails.srv  GetRefinedPointCloud.srv  GetSubSampledNormalsPointCloud.srv  PoseEstimation.srv  PoseEstimation.srv~  SetObjectCoordinateFrame.srv  grasp_ranking.srv
pf3dTracker/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
pf3dTracker/config/: parameters.yaml
pf3dTracker/include/iCub/: pf3dTracker.hpp  pf3dTrackerSupport.hpp
pf3dTracker/launch/: pf3dTracker.launch
pf3dTracker/lib/: CMakeLists.txt  pf3dTracker.cpp  pf3dTrackerSupport.cpp
pf3dTracker/msg/: Estimates.msg  estimates.msg
pf3dTracker/src/: CMakeLists.txt  Pf3dTrackerRos.cpp  Pf3dTrackerRos.h  pf3dTracker.cpp  pf3dTrackerMain.cpp
segmentation_tests/: CMakeLists.txt  package.xml
segmentation_tests/src/: region_growing_segmentation.cpp
tabletop_object_segmentation_online/: CMakeLists.txt  CMakeLists.txt~  package.xml
tabletop_object_segmentation_online/launch/: table_top_mico_on_table_gazebo.launch  tabletop_segmentation_online_param_up.launch  tabletop_segmentation_online_param_up.launch~  tabletop_segmentation_online_param_up_freiburg.launch  tabletop_segmentation_online_param_up_gazebo.launch  tabletop_segmentation_online_param_up_test.launch
tabletop_object_segmentation_online/src/: marker_generator.cpp  tabletop_segmentation_online_param_up.cpp
