<package>
  <name>bottomup_msgs</name>
  <version>0.0.0</version>
  <description>bottomup_msgs</description>
  <author>Rui M. H. Pimentel de Figueiredo</author>
  <maintainer email="ruifigueiredo@isr.ist.utl.pt">Rui M. H. Pimentel de Figueiredo</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/bottomup_msgs</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!--<build_depend>object_recognition_msgs</build_depend>-->
  <build_depend>tabletop_object_segmentation_online</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>tabletop_object_segmentation_online</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>object_recognition_msgs</run_depend>
</package>


