<?xml version="1.0"?>
<package>
  <name>perception</name>
  <version>0.0.0</version>
  <description>The perception package</description>

  <maintainer email="rui@todo.todo">rui</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>tabletop_object_segmentation_online</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>perception_msgs</build_depend>

  <run_depend>message_generation</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>tabletop_object_segmentation_online</run_depend>
  <run_depend>perception_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
