<?xml version="1.0"?>
<package>
  <name>tabletop_object_segmentation_online</name>
  <version>0.0.0</version>
  <description>
		Updates the segmentation parameters online
  </description>

  <author>Marius Muja and Matei Ciocarlie and Rui P. Figueiredo</author>
  <maintainer  email="ruifigueiredo@isr.ist.utl.pt">Rui P. Figueiredo</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/object_detector</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>

  <build_depend>visualization_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>distance_field</build_depend>
  <build_depend>shape_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>pcl</run_depend>
  <export>
    <cpp cflags="-I${prefix}/include" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -ltabletop_model_fitter -lmarker_generator"/>
  </export>
</package>


